Fixed + any colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="container-fluid py-5">
                       <h1 class="display-5 fw-bold">JavaScript Quiz</h1>
                       <p class="col-md-8 fs-4">In this quiz you are to make it where you can type in the box number and change the color of the inside of the box to any of the following colors.</p>
-                      <p>Red ,Blue ,Purple ,Brown and Yellow</p>
+                      <p>Example: Red ,Blue ,Purple ,Brown and Yellow</p>
                     </div>
                   </div>
             </div>
